--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,7 +3,14 @@
 @tailwind utilities;
 
 body {
+  margin: 2rem;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 @layer utilities {
